Fix wordwrap

--- a/source/stylesheets/_gocd-overrides.css.scss
+++ b/source/stylesheets/_gocd-overrides.css.scss
@@ -35,6 +35,7 @@ blockquote + .highlight {
   + table tbody tr {
     code {
       word-break: normal;
+      white-space: nowrap;
     }
   }
 }
